CB-151, restore getAllDeals
